catch2: Autospec creation for update from version 3.4.0 to version 3.5.0
Alex Merry (1):
      Improve formatting of test specification docs

Beartama (1):
      Add JSON reporter (#2706)

Blake-Madden (1):
      Fix minor typos in documentation (#2769)

Chris Thrasher (1):
      Mark `CATCH_CONFIG_` options as advanced

Christian Tacke (1):
      fix some bugprone-macro-parentheses warnings

Gerald Senarclens de Grancy (1):
      lifted suggested version

Holger Kaelberer (1):
      Catch.cmake: Support CMake multi-config with PRE_TEST discovery mode (#2739)

Ikko Eltociear Ashimine (1):
      Fix typo in tostring.md

Ilya Arzhannikov (1):
      correct argument references in CatchAddTests.cmake

Jonathan Allen Grant (1):
      Update meson.build to fix #2722 (#2742)

Krzysiek Karbowiak (2):
      Increase build parallelism on macOS (#2759)
      Bump up actions/checkout version to v4 (#2760)

Martin Hořeňovský (41):
      Always default empty destructors
      Constify section hints in static-analysis mode
      Add missing line for v3.4.0 to ToC in release-notes.md
      Mention missing catch_user_config.hpp in FAQ
      Flush stream after benchmarkStarting in ConsoleReporter
      Change 'estimated' to 'est run time' in console reporter output
      Small cleanup in XML reporter
      Add nice license headers to files in examples/ and fuzzing/
      Support C arrays and ADL ranges in from_range generator
      Rewrite commandline test spec docs
      Update sample output in docs/benchmarks.md
      Replace vector iterator args in benchmarks with ptr args
      Remove unused typedef from Benchmark::Environment
      Remove superfluous stdlib includes from catch_benchmark.hpp
      Reduce the number of templates in Benchmarking
      Make directCompare TU-local to stats.cpp
      Make jackknife TU-local to stats.cpp
      Add test for multiple streaming parts in UNSCOPED_INFO
      Fix UDL definitions for C++23
      Fix tests for C++23's multi-arg index operator


--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = catch2
-url = https://github.com/catchorg/Catch2/archive/v3.4.0/catch2-3.4.0.tar.gz
+url = https://github.com/catchorg/Catch2/archive/v3.5.0/Catch2-3.5.0.tar.gz
 archives = 
 giturl = https://github.com/catchorg/Catch2.git
 domain = 
