--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = catch2
-url = https://github.com/catchorg/Catch2/archive/v3.5.0/Catch2-3.5.0.tar.gz
+url = https://github.com/catchorg/Catch2/archive/v3.6.0/Catch2-3.6.0.tar.gz
 archives = 
 giturl = https://github.com/catchorg/Catch2.git
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = false
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = false
 
