--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = catch2
-url = https://github.com/catchorg/Catch2/archive/v3.6.0/Catch2-3.6.0.tar.gz
+url = https://github.com/catchorg/Catch2/archive/v3.7.0/Catch2-3.7.0.tar.gz
 archives = 
 giturl = https://github.com/catchorg/Catch2.git
 domain = 
@@ -17,6 +17,8 @@ allow_test_failures = false
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
 autoupdate = false
+# try to use mock short circuit to avoid full rebuilds
+avoid_rebuild = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
